# MyGraduationDesign

./: README.md  build.gradle  import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/myimage/: ExampleInstrumentedTest.java  OpenCVTest.java  TessTwoTest.java
app/src/androidTest/java/com/example/opencvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  TextDetection.cpp  TextDetection.h  native-lib.cpp
app/src/main/java/com/example/databaseHelper/: Database.java  History.java  MyHelper.java
app/src/main/java/com/example/myimage/: MainActivity.java  OcrActivity.java  PretreatmentBitmap.java
app/src/main/java/com/example/myimage/swt/: StrokeWidthTransform.java
app/src/main/java/com/example/opencvdemo/: AbortActivity.java  BitmapUtils.java  ConfigUtils.java  HistoryActivity.java  HistoryDetailActivity.java  MainActivity.java  MainActivity.kt  MainActivity2.java  NaturalSceneOCR.java  ResActivity.java  SDUtils.java
app/src/main/res/layout/: activity_abort.xml  activity_history.xml  activity_history_detail.xml  activity_main.xml  activity_result.xml  list_item.xml
app/src/main/res/menu/: menu_optionmenu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/myimage/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
java/: build.gradle
opensdk/java/src/org/opencv/android/: BaseLoaderCallback.java
utakephoto/: build.gradle
utakephoto/src/main/java/com/sl/utakephoto/manager/: TakePhotoManager.java
图像预处理/: Untitled.ipynb
